--- a/html/frame4.html
+++ b/html/frame4.html
@@ -153,20 +153,20 @@
         </div>
 <!--  -->
   <ul class="aui-list aui-list-in">
-    <li class="aui-list-item list_li" onclick="fnopenOrder()">
+    <!-- <li class="aui-list-item list_li" onclick="fnopenOrder()">
         <div class="aui-list-item-label-icon list">
         <img src="../image/user-icon6.png" alt="">
         </div>
         <div class="aui-list-item-inner aui-list-item-arrow">
             我的订单
         </div>
-    </li>
+    </li> -->
             <li class="aui-list-item list_li" onclick="fnopenCar()">
                 <div class="aui-list-item-label-icon list">
                 <img src="../image/user-icon6.png" alt="">
                 </div>
                 <div class="aui-list-item-inner aui-list-item-arrow">
-                    购物车
+                    我的二维码
                 </div>
             </li>
             <li class="aui-list-item list_li" onclick="fnopenmyrelease()">
@@ -185,22 +185,22 @@
                     我的简历
                 </div>
             </li>
-            <li class="aui-list-item list_li" onclick="fnopenMycollection()">
+            <!-- <li class="aui-list-item list_li" onclick="fnopenMycollection()">
                 <div class="aui-list-item-label-icon list">
                     <img src="../image/user-icon7.png" alt="">
                 </div>
                 <div class="aui-list-item-inner aui-list-item-arrow">
                   我的收藏
                 </div>
-            </li>
-            <li class="aui-list-item list_li" onclick="fnopenLsjl()">
+            </li> -->
+            <!-- <li class="aui-list-item list_li" onclick="fnopenLsjl()">
                 <div class="aui-list-item-label-icon list">
                     <img src="../image/user-icon8.png" alt="">
                 </div>
                 <div class="aui-list-item-inner aui-list-item-arrow" style="">
                     历史记录
                 </div>
-            </li>
+            </li> -->
             <li class="aui-list-item list_li" onclick="fnopenAdmission()">
                 <div class="aui-list-item-label-icon list">
                     <img src="../image/dingyue.png" alt="">
