--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@ apiready = function () {
     initEventListenner();
     api.parseTapmode();
 }
+var jsfun  = function load() {
+  location.reload()
+}
 function funIniGroup(index){
     var eHeaderLis = $api.domAll('header li'),
         set = $api.byId('set'),
