--- a/html/Fabu/HzRelease.html
+++ b/html/Fabu/HzRelease.html
@@ -5,13 +5,18 @@
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
     <meta name="format-detection" content="telephone=no,email=no,date=no,address=no">
     <link rel="stylesheet" type="text/css" href="../../css/aui.css" />
+    <style media="screen">
+      body{
+        overflow-x: hidden;
+      }
+    </style>
 </head>
 <body>
     <header class="aui-bar aui-bar-nav" id="aui-header">
         <a class="aui-btn aui-pull-left" tapmode onclick="closeWin()">
             <span class="aui-iconfont aui-icon-left"></span>
         </a>
-        <div class="aui-title">合租发布</div>
+        <div class="aui-title">出租发布</div>
     </header>
 </body>
 <script type="text/javascript" src="../../script/api.js"></script>
@@ -37,7 +42,7 @@
                 title:'加载中.....',
                 text:'先喝会儿茶~~~'
               },
-        }) 
+        })
     };
     function closeWin(){
         api.closeWin({
